==> adafruit/circuitpython/ports/espressif/common-hal/_bleio/Connection.c <==
#include "shared-bindings/_bleio/Connection.h"
#include <string.h>
#include <stdio.h>
#include "py/gc.h"
#include "py/objlist.h"
#include "py/objstr.h"
#include "py/qstr.h"
#include "py/runtime.h"
#include "shared/runtime/interrupt_char.h"
#include "shared-bindings/_bleio/__init__.h"
#include "shared-bindings/_bleio/Adapter.h"
#include "shared-bindings/_bleio/Attribute.h"
#include "shared-bindings/_bleio/Characteristic.h"
#include "shared-bindings/_bleio/Service.h"
#include "shared-bindings/_bleio/UUID.h"
#include "shared-bindings/time/__init__.h"
#include "supervisor/shared/tick.h"
#include "common-hal/_bleio/ble_events.h"
#include "host/ble_att.h"

void common_hal_bleio_connection_disconnect(bleio_connection_internal_t *self) {
    // Second argument is an HCI reason, not an HS error code.
    ble_gap_terminate(self->conn_handle, BLE_ERR_REM_USER_CONN_TERM);
}

void common_hal_bleio_connection_pair(bleio_connection_internal_t *self, bool bond) {
    // We may already be trying to pair if we just reconnected to a peer we're
    // bonded with.
    while (self->pair_status == PAIR_WAITING && !mp_hal_is_interrupted()) {
        RUN_BACKGROUND_TASKS;
    }
    if (self->pair_status == PAIR_PAIRED) {
        return;
    }
    self->pair_status = PAIR_WAITING;
    CHECK_NIMBLE_ERROR(ble_gap_security_initiate(self->conn_handle));
    while (self->pair_status == PAIR_WAITING && !mp_hal_is_interrupted()) {
        RUN_BACKGROUND_TASKS;
    }
    if (mp_hal_is_interrupted()) {
        return;
    }
}

mp_float_t common_hal_bleio_connection_get_connection_interval(bleio_connection_internal_t *self) {
    while (self->conn_params_updating && !mp_hal_is_interrupted()) {
        RUN_BACKGROUND_TASKS;
    }
    if (mp_hal_is_interrupted()) {
        return 0;
    }
    struct ble_gap_conn_desc desc;
    CHECK_NIMBLE_ERROR(ble_gap_conn_find(self->conn_handle, &desc));
    return 1.25f * desc.conn_itvl;
}

void common_hal_bleio_connection_set_connection_interval(bleio_connection_internal_t *self, mp_float_t new_interval) {
    self->conn_params_updating = true;
    struct ble_gap_conn_desc desc;
    CHECK_NIMBLE_ERROR(ble_gap_conn_find(self->conn_handle, &desc));
    uint16_t interval = new_interval / 1.25f;
    struct ble_gap_upd_params updated = {
        .itvl_min = interval,
        .itvl_max = interval,
        .latency = desc.conn_latency,
        .supervision_timeout = desc.supervision_timeout
    };
    CHECK_NIMBLE_ERROR(ble_gap_update_params(self->conn_handle, &updated));
}

static void discover_remote_services(bleio_connection_internal_t *self, mp_obj_t service_uuids_whitelist) {
    // Start over with an empty list.
    self->remote_service_list = mp_obj_new_list(0, NULL);

    // Start timeout in case discovery gets stuck.
    _start_discovery_timeout();

    if (service_uuids_whitelist == mp_const_none) {
        // Reset discovery status before starting callbacks
        _set_discovery_step_status(0);

        CHECK_NIMBLE_ERROR(ble_gattc_disc_all_svcs(self->conn_handle, _discovered_service_cb, self));

        // Wait for _discovered_service_cb() to be called multiple times until it's done.
        int status = _wait_for_discovery_step_done();
        if (status != BLE_HS_EDONE) {
            CHECK_BLE_ERROR(status);
        }
    } else {
        mp_obj_iter_buf_t iter_buf;
        mp_obj_t iterable = mp_getiter(service_uuids_whitelist, &iter_buf);
        mp_obj_t uuid_obj;
        while ((uuid_obj = mp_iternext(iterable)) != MP_OBJ_STOP_ITERATION) {
            if (!mp_obj_is_type(uuid_obj, &bleio_uuid_type)) {
                mp_raise_TypeError(MP_ERROR_TEXT("non-UUID found in service_uuids_whitelist"));
            }
            bleio_uuid_obj_t *uuid = MP_OBJ_TO_PTR(uuid_obj);

            // Reset discovery status before starting callbacks
            _set_discovery_step_status(0);

            CHECK_NIMBLE_ERROR(ble_gattc_disc_svc_by_uuid(self->conn_handle, &uuid->nimble_ble_uuid.u,
                _discovered_service_cb, self));

            // Wait for _discovered_service_cb() to be called multiple times until it's done.
            int status = _wait_for_discovery_step_done();
            if (status != BLE_HS_EDONE) {
                CHECK_BLE_ERROR(status);
            }
        }
    }

    // Now discover characteristics for each discovered service.

    for (size_t i = 0; i < self->remote_service_list->len; i++) {
        bleio_service_obj_t *service = MP_OBJ_TO_PTR(self->remote_service_list->items[i]);

        // Reset discovery status before starting callbacks
        _set_discovery_step_status(0);

        CHECK_NIMBLE_ERROR(ble_gattc_disc_all_chrs(self->conn_handle,
            service->start_handle,
            service->end_handle,
            _discovered_characteristic_cb,
            service));

        // Wait for _discovered_characteristic_cb() to be called multiple times until it's done.
        int status = _wait_for_discovery_step_done();
        if (status != BLE_HS_EDONE) {
            CHECK_BLE_ERROR(status);
        }

        // Got characteristics for this service. Now discover descriptors for each characteristic.
        size_t char_list_len = service->characteristic_list->len;
        for (size_t char_idx = 0; char_idx < char_list_len; ++char_idx) {
            bleio_characteristic_obj_t *characteristic =
                MP_OBJ_TO_PTR(service->characteristic_list->items[char_idx]);
            // Determine the handle range for the given characteristic's descriptors.
            // The end of the range is dictated by the next characteristic or the end
            // handle of the service.
            const bool last_characteristic = char_idx == char_list_len - 1;
            bleio_characteristic_obj_t *next_characteristic = last_characteristic
                ? NULL
                : MP_OBJ_TO_PTR(service->characteristic_list->items[char_idx + 1]);

            uint16_t end_handle = next_characteristic == NULL
                ? service->end_handle
                : next_characteristic->handle - 1;

            // Pre-check if there are no descriptors to discover so descriptor discovery doesn't fail
            if (end_handle <= characteristic->handle) {
                continue;
            }

            // Reset discovery status before starting callbacks
            _set_discovery_step_status(0);

            // The descriptor handle inclusive range is [characteristic->handle + 1, end_handle],
            // but ble_gattc_disc_all_dscs() requires starting with characteristic->handle.
            CHECK_NIMBLE_ERROR(ble_gattc_disc_all_dscs(self->conn_handle, characteristic->handle,
                end_handle,
                _discovered_descriptor_cb, characteristic));

            // Wait for _discovered_descriptor_cb to be called multiple times until it's done.
            status = _wait_for_discovery_step_done();
            if (status != BLE_HS_EDONE) {
                CHECK_BLE_ERROR(status);
            }
        }
    }
}
